<resources>
    <string name="app_name">ListaVip</string>
    <string name="txt_titulo">Aplicativo Listagem Diária</string>
    <string name="txt_hint_edit_primeiro_nome">Primeiro nome</string>
    <string name="txt_hint_edit_sobrenome">Sobrenome</string>
    <string name="txt_hint_edit_cpf">CPF</string>
    <string name="txt_hint_edit_fone">Telefone de contato</string>
    <string name="txt_button_limpar">Limpar</string>
    <string name="txt_button_salvar">Salvar</string>
    <string name="txt_button_finalizar">Finalizar</string>
    <string name="selecione_um_genero">Selecione um gênero</string>
    <string name="ver_mais">Ver mais</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home_txt">Cadastrar</string>
    <string name="periodo_txt">Período específico</string>
    <string name="hoje_txt">Hoje</string>
    <string name="open_nav">Open navigation</string>
    <string name="close_nav">Close navigation</string>
    <string name="selecione_data_txt">Selecione Data</string>
    <string name="selecione_um_periodo_txt">Selecione uma data</string>
    <string name="data_final_txt">Data Final</string>
    <string name="editar_pessoa_txt">Editar Pessoa</string>
    <string name="deletar_pessoa_txt">deletar pessoa</string>
    <string name="inicio_txt">Inicio / Hoje</string>
    <string name="calendario_txt">Calendário</string>
    <string name="cadastrar_txt">Cadastrar</string>
</resources>